--- a/Chart.yaml
+++ b/Chart.yaml
@@ -24,18 +24,18 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: gateway
-    version: 0.1.0
-    repository: "file://./gateway"
+  # - name: gateway
+  #   version: 0.1.0
+  #   repository: "file://./gateway"
 
   - name: auth
     version: 0.1.0
     repository: "file://./auth"
 
-  - name: user
-    version: 0.1.0
-    repository: "file://./user"
+  # - name: user
+  #   version: 0.1.0
+  #   repository: "file://./user"
 
-  - name: payment
-    version: 0.1.0
-    repository: "file://./payment"
+  # - name: payment
+  #   version: 0.1.0
+  #   repository: "file://./payment"
