--- a/charts/auth/values.yaml
+++ b/charts/auth/values.yaml
@@ -12,7 +12,8 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v5.1.1-null-dev-5d64afb4"
-
+configmap:
+  enabled: false
 ingress:
   enabled: false
 
