--- a/Chart.yaml
+++ b/Chart.yaml
@@ -24,9 +24,9 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  # - name: gateway
-  #   version: 0.1.0
-  #   repository: "file://./gateway"
+  - name: gateway
+    version: 0.1.0
+    repository: "file://./gateway"
 
   - name: auth
     version: 0.1.0
