image secret 예외

--- a/charts/auth/values.yaml
+++ b/charts/auth/values.yaml
@@ -18,7 +18,8 @@ auth:
     enabled: false
 
   imagePullSecrets:
-    - name: ghcr-key-scr
+    # - name: ghcr-key-scr
+    - name: ""
   nameOverride: ""
   fullnameOverride: ""
 
